<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_title"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/poster"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/poster"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_rating"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/user_rating"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vote_data"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/release_date"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/release_date"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/release_date_data"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favoriteStar"
            android:layout_gravity="center_horizontal"
            android:onClick="favoriteMovieSelected"
            android:contentDescription="@string/fav_star"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/favText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plot_synopsis"
            android:text="@string/plot_synopsis"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plot_data"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBeige"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"

            />
        <TextView
            android:id="@+id/trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/trailer"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_video_trailers">
        </android.support.v7.widget.RecyclerView>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBeige"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            />
        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/review"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_review">
        </android.support.v7.widget.RecyclerView>


        <TextView
            android:id="@+id/tv_error_message_display2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible" />
        <ProgressBar
            android:id="@+id/pb_loading_indicator2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>